language/move-lang/tests/move_check/translated_ir_tests/commands/break_unreachable.exp
error: 

   ┌── tests/move_check/translated_ir_tests/commands/break_unreachable.move:8:9 ───
   │
 8 │         x = 5;
   │         ^^^^^ Unreachable code. This statement (and any following statements) will not be executed. In some cases, this will result in unused resource values.
   │

