language/move-lang/tests/move_check/translated_ir_tests/commands/break_unreachable.move
script {
fun main() {
    let x;
    while (true) {
        x = 3;
        x;
        break;
        x = 5;
        x;
        break
    };
}
}
